--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -4,8 +4,6 @@ on:
   push:
     branches:
       - main
-    paths:
-      - 'DockerFile'
 
 jobs:
   build:
@@ -18,9 +16,9 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       - name: Login to DockerHub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
-          username: "ikaroshub"
+          username: "ikaroshub" #${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.IKRS_DOCKERHUB_PASSWORD }}
 
       - name: Build and push Docker image
