--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Publish Docker Image
+name: Build and Push dbt-sqlserver Docker Image
 
 on:
   push:
@@ -8,20 +8,31 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v2
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Login to DockerHub
+      - name: Cache Docker layers
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+
+      - name: Log in to DockerHub
         uses: docker/login-action@v2
         with:
-          username: "ikaroshub" #${{ secrets.DOCKER_USERNAME }}
+          username: "ikaroshub"
           password: ${{ secrets.IKRS_DOCKERHUB_PASSWORD }}
 
       - name: Build and push Docker image
-        run: |
-          docker build -t ikaroshub/dbt-sqlserver:latest .
-          docker push ikaroshub/dbt-sqlserver:latest
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          push: true
+          tags: ikaroshub/dbt-sqlserver:latest
